# ham

include/ham/misc/: types.hpp
include/ham/net/: communicator_mpi.hpp
include/ham/offload/: offload.hpp
include/ham/util/: exchange.hpp
src/: CMakeLists.txt  ham_iostream.hpp  multiple_target_inner_product.cpp  seqan_offload.cpp  serialize_vector.cpp  two_target_inner_product.cpp
